--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGODB_URL = mongodb+srv://hoald:12345@e-commerce.pbqmx.mongodb.net/e-commerce?retryWrites=true&w=majority
-DB_USERNAME = hoald
-DB_PASSWORD = 12345
+DB_USERNAME = ldhoa
+DB_PASSWORD = 6rQTlj4oZ5ZKquSW
 ACCESS_TOKEN_SECRET = vc)3@mqUjZjb8D'xb@#Qg{mRAunV,";yVDM48eY8A;MFf=xZ{=
 REFRESH_TOKEN_SECRET = :Cb+BSvv$q$?5@n9&q7Y(&93Wh;#AY@mYG~uByPFwz.[E7-Yx2
 
